update cors policy